
  - Introduction of the FIP criterion (Hara et al. 2021)
    - In the parent folder of all the subruns of a particular model it will now
      copy the script to calculate the FIP periodogram with the available runs.
    - This automatically checks for finished runs and uses those.
  - Prior ranges are no longer rounded for display. It could potentially be
    problematic for very small numbers.
  - linear parameters are now better taken into account in the RVModel. There is
    a new dictionary linpar_dict where the user should add the linear parameters
    and their corresponding timeseries. 

--------------------------------------------------------------------------------

Release 0.1.5: February 4, 2020
  
  - linear_paramater in RVModel now has an additional keyword 'filter_type' to 
    indicate wether Low pass or High pass filter is desired.
  - Fixed bug where RVModel couldn't be used without adding a jitter.
  - Fixed post_processing to work with new lesta directory layout.
  - Went back to using equally weighted posteriors for the histograms, and bins
    equally spaced in log scale por the periods.
  - Some minor aesthetic changes in the results file.
  - The corner plot is now turned off by default and can be enabled by adding -c
    when calling post_processing.py like 'python post_processing.py -c'. This is
    because it takes a loot of time to process for big models.

--------------------------------------------------------------------------------

Release 0.1.4: June 25, 2020

  - If sesin and secos were used as free parameter, the post processing now checks
    for that and converts them to eccentricity and omega and plots those.
  - Corner plots were added to the post processing
  - There's an option now to choose if the planets should be ordered by period.
    This is added as a key to the rundict in the configfile called 'order_planets'.
    This should be a boolean to indicate if the ordering should happen or not.