@@ -11,9 +11,13 @@ Release 0.2.0: TBA
     - This automatically checks for finished runs and uses those.
   - Prior ranges are no longer rounded for display. It could potentially be
     problematic for very small numbers.
-  - linear parameters are now better taken into account in the RVModel. There is
+  - Linear parameters are now better taken into account in the RVModel. There is
     a new dictionary linpar_dict where the user should add the linear parameters
-    and their corresponding timeseries. 
+    and their corresponding timeseries.
+  - The time column in RV datasets can now also be 'jdb' instead of only 'rjd'.
+  - FIP periodograms are saved both as pdf's and png's.
+  - The FIP script now has an option to turn off the option to display the plots
+    after running the code and instead just save the files for the plots.
 
 --------------------------------------------------------------------------------
 
